--- a/WebContent/public/head.jspf
+++ b/WebContent/public/head.jspf
@@ -3,6 +3,9 @@
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <c:set value="${pageContext.request.contextPath }" var="shop"></c:set>
 <title>易购商城</title>
+<!-- 前端页面的样式 -->
+<link rel="stylesheet" href="${shop }/css/public.css" type="text/css"></link>
+<link rel="stylesheet" href="${shop }/css/style.css" type="text/css"></link>
 <!-- 下面是easyui的环境 -->
 <link rel="stylesheet" href="${shop }/jquery-easyui-1.3.5/themes/icon.css" type="text/css"></link>
 <link rel="stylesheet" href="${shop }/jquery-easyui-1.3.5/themes/default/easyui.css" type="text/css"></link>
