--- a/WebContent/public/head.jspf
+++ b/WebContent/public/head.jspf
@@ -1,6 +1,7 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
+<%@ taglib prefix="fn" uri="http://java.sun.com/jsp/jstl/functions" %>
 <c:set value="${pageContext.request.contextPath }" var="shop"></c:set>
 <title>易购商城</title>
 <!-- 前端页面的样式 -->
